# CogKit

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  hatch.toml  pyproject.toml  ruff.toml  ruff_defaults.toml  train_cogvideo2b.py  train_cogview4.py
.github/workflows/: python-lint.yml  test-webdoc-deploy.yml  webdoc-deploy.yml
docker/: Dockerfile  dockerfile
docs/: 01-Intro.md  02-Installation.md  05-Model Card.md  05-Model Card.mdx  installation.md  intro.md
docs/03-Inference/: 01-CLI.md  02-API.md  _category_.json
docs/04-Finetune/: 01-Prerequisites.md  01-Prerequisites.mdx  02-Quick Start.md  03-Data Format.md  _category_.json
docs/finetune/: _category_.json  data format.md  prerequisites.md
docs/inference/: API.md  _category_.json
gradio/: gradio_infer_demo.py  gradio_lora_demo.py  gradio_ui.py
gradio/configs/: t2i.yaml  t2v.yaml
gradio/styles/: mono.py
gradio/utils/: __init__.py  io.py  logging.py  misc.py  task.py
quickstart/configs/: accelerate_config.yaml
quickstart/data/i2v/test/: metadata.jsonl
quickstart/data/i2v/train/: metadata.jsonl
quickstart/data/i2v/train/images/: metadata.jsonl
quickstart/data/i2v/train/videos/: metadata.jsonl
quickstart/data/t2i/test/: prompt.jsonl
quickstart/data/t2i/train/: metadata.jsonl
quickstart/data/t2v/train/: metadata.jsonl
quickstart/scripts/: train.py  train_ddp_i2v.sh  train_ddp_t2i.sh  train_ddp_t2v.sh  train_zero_i2v.sh  train_zero_t2i.sh  train_zero_t2v.sh
quickstart/scripts/i2v/: config.yaml  start_train.sh
quickstart/scripts/t2i/: config.yaml
quickstart/scripts/t2v/: config.yaml
scripts/converters/: zero2diffusers.py
src/cogkit/: __init__.py  __main__.py
src/cogkit/api/: __init__.py  application.py  dependencies.py  logging.py  settings.py  state.py
src/cogkit/api/models/: request.py  response.py
src/cogkit/api/models/images/: __init__.py  generation_params.py  response.py
src/cogkit/api/python/generation/: util.py
src/cogkit/api/routers/: __init__.py  images.py
src/cogkit/api/services/: __init__.py  image_generation.py
src/cogkit/cli/: __init__.py  finetune.py  inference.py  launch.py  openai_demo.py
src/cogkit/datasets/: __init__.py  i2v_dataset.py  t2i_dataset.py  t2v_dataset.py  utils.py
src/cogkit/finetune/: __init__.py  _register.py  logger.py  register.py
src/cogkit/finetune/base/: __init__.py  base_args.py  base_component.py  base_state.py  base_trainer.py
src/cogkit/finetune/configs/zero/: zero3.yaml  zero3_offload.yaml
src/cogkit/finetune/datasets/: __init__.py  i2v_dataset.py  t2i_dataset.py  t2v_dataset.py  utils.py
src/cogkit/finetune/diffusion/: accelerate_config.yaml  train.py  trainer.py
src/cogkit/finetune/diffusion/diff_datasets/: __init__.py  i2v_dataset.py  t2i_dataset.py  t2v_dataset.py
src/cogkit/finetune/diffusion/models/: __init__.py
src/cogkit/finetune/diffusion/schemas/: __init__.py  args.py  components.py  state.py
src/cogkit/finetune/diffusion/scripts/: train_ddp_t2v.sh  zero2diffusers.py
src/cogkit/finetune/samplers/: __init__.py  packing_sampler.py
src/cogkit/finetune/utils/: __init__.py  attn_mask.py  ckpt.py  collate_utils.py  dist.py  file_utils.py  filters.py  io.py  memory.py  memory_utils.py  misc.py  optimizer_utils.py  torch_utils.py  tracker.py
src/cogkit/generation/: __init__.py  image.py  util.py  video.py
src/cogkit/python/: __init__.py
src/cogkit/python/generation/: image.py  util.py  video.py
src/cogkit/samplers/: __init__.py  packing_sampler.py
src/cogkit/types/: __init__.py  generation_mode.py
src/cogkit/utils/: __init__.py  diffusion_pipeline.py  load.py  lora.py  misc.py  path.py  prompt.py  random.py  seed.py
src/cogkit/web/: infer.py
src/cogmodels/: __main__.py  logging.py
src/cogmodels/cli/: __init__.py  demo.py  finetune.py  inference.py  launch.py
src/cogmodels/finetune/: __init__.py
src/cogmodels/finetune/base/: base_args.py  base_trainer.py
src/cogmodels/finetune/data/: README.md
src/cogmodels/finetune/diffusion/: constants.py  trainer.py
src/cogmodels/finetune/diffusion/datasets/: i2v_dataset.py  t2v_dataset.py  utils.py
src/cogmodels/finetune/diffusion/diff_datasets/: __init__.py  i2v_dataset.py  t2v_dataset.py  utils.py
src/cogmodels/finetune/diffusion/schemas/: args.py  state.py
src/cogmodels/finetune/diffusion/scripts/: train_ddp_i2v.sh  train_ddp_t2i.sh  train_ddp_t2v.sh  train_zero_i2v.sh  train_zero_t2i.sh  train_zero_t2v.sh
src/cogmodels/finetune/utils/: checkpointing.py
src/cogmodels/generation/: __init__.py  image.py  util.py  video.py
src/cogmodels/utils/: diffusion_pipeline.py  dtype.py  lora.py  misc.py
src/cogmodels/utils/cogvideo/: train.py  trainer.py
src/cogmodels/utils/cogvideo/datasets/: __init__.py  bucket_sampler.py  i2v_dataset.py  t2v_dataset.py  utils.py
src/cogmodels/utils/cogvideo/models/: __init__.py  utils.py
src/cogmodels/utils/cogvideo/schemas/: __init__.py  args.py  state.py
src/cogmodels/utils/cogvideo/scripts/: extract_images.py
src/cogmodels/utils/cogvideo/utils/: checkpointing.py  file_utils.py  (+3 more)
tests/: test_expand_list.py  test_mean_filter.py  test_sampler.py
tests/utils/: test_path.py
tools/: resize_img.py
tools/converters/: merge.py  zero2diffusers.py
tools/pixelart_dataset/: download_convert.py
web/: infer.py
(+26 files in other folders)
