[project]
name = "cogkit"
dynamic = ["version"]
description = "CogView/CogVideo"
authors = [{ name = "Chenhui Zhang", email = "zhang.chenhui@outlook.com" }]
dependencies = [
  "click~=8.1",
  "datasets~=3.4",
  "diffusers @ git+https://github.com/huggingface/diffusers.git",
  "imageio-ffmpeg~=0.6.0",
  "imageio~=2.37",
  "sentencepiece==0.2.0",
  "transformers~=4.49",
]
requires-python = ">=3.10"
readme = "README.md"
# FIXME: changes licence
license = { text = "MIT" }


[project.optional-dependencies]
torch = ["numpy", "torch", "torchvision"]


[project.scripts]
cogkit = "cogkit.cli:cli"


[build-system]
requires = [
  "hatchling",
  # * uses vcs (e.g. git) to determine the package version
  "hatch-vcs",
]
build-backend = "hatchling.build"


[dependency-groups]
dev = ["mypy~=1.15", "ruff~=0.11.0"]


[tool.hatch.version]
source = 'vcs'


[tool.hatch.version.raw-options]
version_scheme = 'python-simplified-semver'
local_scheme = 'no-local-version'


[tool.hatch.build.hooks.vcs]
version-file = 'src/cogkit/_version.py'


[tool.hatch.metadata]
allow-direct-references = true


[tool.pdm]
distribution = true


[tool.ruff]
# https://github.com/astral-sh/ruff/issues/8627
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "dist"]
target-version = "py310"
line-length = 100
indent-width = 4


[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"
